Loading Study from YAML example

--- a/examples/study_usage_examples.ipynb
+++ b/examples/study_usage_examples.ipynb
@@ -305,24 +305,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating a Study config dict"
+    "### 1. Creating a Study using Config Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Writing the config dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "study_config = {\n",
-    "    \"name\": \"ex-load-study\",\n",
+    "    \"study_name\": \"ex-load-study\",\n",
     "    \"output_dir\": \"example-outputs\",\n",
     "    \"optimizers\": [\"SMAC_Hyperband\", \"DEHB\"],\n",
     "    \"benchmarks\": [\"mfh3_good\", \"pd1-cifar100-wide_resnet-2048\", \"pd1-imagenet-resnet-512\"],\n",
     "    \"seeds\": 1,\n",
     "   \" budget\": 100,\n",
-    "    \"overwrite\": True,\n",
-    "    \"group_by\": \"memory\",\n",
+    "    \"group_by\": \"mem\",\n",
     "}"
    ]
   },
@@ -335,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +350,8 @@
      "text": [
       "INFO:hposuite.study:Generated 6 runs\n",
       "INFO:hposuite.study:Created study at /home/soham/repos/hposuite/examples/example-outputs/ex-load-study\n",
-      "INFO:hposuite.study:Dumped experiments to /home/soham/repos/hposuite/examples/example-outputs/ex-load-study/dump_all.txt\n"
+      "INFO:hposuite.study:Dumped experiments to /home/soham/repos/hposuite/examples/example-outputs/ex-load-study/dump_2048mb.txt\n",
+      "INFO:hposuite.study:Dumped experiments to /home/soham/repos/hposuite/examples/example-outputs/ex-load-study/dump_13312mb.txt\n"
      ]
     }
    ],
@@ -363,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +408,92 @@
     }
    ],
    "source": [
-    "study.optimize(overwrite=True)"
+    "study.optimize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Creating a Study using a Config YAML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the Study using the example YAML in example/exp_configs/sample_multirun_config.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hposuite.study:Generated 4 runs\n",
+      "INFO:hposuite.study:Created study at /home/soham/repos/hposuite/examples/example-outputs/sample_multirun\n",
+      "INFO:hposuite.study:Dumped experiments to /home/soham/repos/hposuite/examples/example-outputs/sample_multirun/dump_all.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hposuite import Study\n",
+    "\n",
+    "study = Study.from_yaml(\"./exp_configs/sample_multirun_config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Running the created Study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hposuite.study:Running 4 experiments sequentially\n",
+      "INFO:hposuite.study:Running experiment 1/4\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=SMAC_Hyperband.eta=2.benchmark=mfh3_good.objectives=value.TrialBudget=100.seed=1\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/sample_multirun/optimizer=SMAC_Hyperband.eta=2.benchmark=mfh3_good.objectives=value.TrialBudget=100.seed=1/optimizer=SMAC_Hyperband.eta=2.benchmark=mfh3_good.objectives=value.TrialBudget=100.seed=1.parquet\n",
+      "INFO:hposuite.study:Running experiment 2/4\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=SMAC_Hyperband.eta=2.benchmark=mfh6_good.objectives=value.TrialBudget=100.seed=1\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/sample_multirun/optimizer=SMAC_Hyperband.eta=2.benchmark=mfh6_good.objectives=value.TrialBudget=100.seed=1/optimizer=SMAC_Hyperband.eta=2.benchmark=mfh6_good.objectives=value.TrialBudget=100.seed=1.parquet\n",
+      "INFO:hposuite.study:Running experiment 3/4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-02-08 16:10:48.509\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mdehb.optimizers.dehb\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m264\u001b[0m - \u001b[33m\u001b[1mA checkpoint already exists, results could potentially be overwritten.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hpoglue._run:COMPLETED running optimizer=DEHB.benchmark=mfh3_good.objectives=value.TrialBudget=100.seed=1\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/sample_multirun/optimizer=DEHB.benchmark=mfh3_good.objectives=value.TrialBudget=100.seed=1/optimizer=DEHB.benchmark=mfh3_good.objectives=value.TrialBudget=100.seed=1.parquet\n",
+      "INFO:hposuite.study:Running experiment 4/4\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=DEHB.benchmark=mfh6_good.objectives=value.TrialBudget=100.seed=1\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/sample_multirun/optimizer=DEHB.benchmark=mfh6_good.objectives=value.TrialBudget=100.seed=1/optimizer=DEHB.benchmark=mfh6_good.objectives=value.TrialBudget=100.seed=1.parquet\n",
+      "INFO:hposuite.study:Completed study with 4 runs\n"
+     ]
+    }
+   ],
+   "source": [
+    "study.optimize()"
    ]
   },
   {
