Example for Study using Study.from_problems()

--- a/examples/study_usage_examples.ipynb
+++ b/examples/study_usage_examples.ipynb
@@ -655,12 +655,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the Problems using `Problem.problem()` in hpoglue"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Add this functionality"
+    "from hpoglue import Problem, FunctionalBenchmark\n",
+    "from hposuite.benchmarks import BENCHMARKS\n",
+    "from hposuite.optimizers import OPTIMIZERS\n",
+    "from hposuite import Study\n",
+    "\n",
+    "\n",
+    "opts = [\"RandomSearch\", \"SMAC_BO\"]\n",
+    "benchs = [\"ackley\", \"branin\", \"mfh3_good\"]\n",
+    "\n",
+    "_problems = []\n",
+    "for b in benchs:\n",
+    "    for o in opts:\n",
+    "        _problems.append(\n",
+    "            Problem.problem(\n",
+    "                optimizer=OPTIMIZERS[o],\n",
+    "                benchmark=BENCHMARKS[b] if not isinstance(BENCHMARKS[b], FunctionalBenchmark) else BENCHMARKS[b].desc,\n",
+    "                budget=10,\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating an hposuite Study using `Study.from_problems()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hposuite.study:Generated 6 runs\n",
+      "INFO:hposuite.study:Created study at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems\n",
+      "INFO:hposuite.study:Dumped experiments to /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/dump_all.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "study = Study.from_problems(\n",
+    "    name=\"ex-from-problems\",\n",
+    "    output_dir=\"example-outputs\",\n",
+    "    problems=_problems,\n",
+    "    seeds=3,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Running the created Study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hposuite.study:Running 6 experiments sequentially\n",
+      "INFO:hposuite.study:Running experiment 1/6\n",
+      "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.random_search.RandomSearch'>. Ignoring continuations=True.\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=RandomSearch.benchmark=ackley.objectives=y.TrialBudget=10.seed=3\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/optimizer=RandomSearch.benchmark=ackley.objectives=y.TrialBudget=10.seed=3/optimizer=RandomSearch.benchmark=ackley.objectives=y.TrialBudget=10.seed=3.parquet\n",
+      "INFO:hposuite.study:Running experiment 2/6\n",
+      "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.smac.SMAC_BO'>. Ignoring continuations=True.\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=SMAC_BO.benchmark=ackley.objectives=y.TrialBudget=10.seed=3\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/optimizer=SMAC_BO.benchmark=ackley.objectives=y.TrialBudget=10.seed=3/optimizer=SMAC_BO.benchmark=ackley.objectives=y.TrialBudget=10.seed=3.parquet\n",
+      "INFO:hposuite.study:Running experiment 3/6\n",
+      "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.random_search.RandomSearch'>. Ignoring continuations=True.\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=RandomSearch.benchmark=branin.objectives=value.TrialBudget=10.seed=3\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/optimizer=RandomSearch.benchmark=branin.objectives=value.TrialBudget=10.seed=3/optimizer=RandomSearch.benchmark=branin.objectives=value.TrialBudget=10.seed=3.parquet\n",
+      "INFO:hposuite.study:Running experiment 4/6\n",
+      "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.smac.SMAC_BO'>. Ignoring continuations=True.\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=SMAC_BO.benchmark=branin.objectives=value.TrialBudget=10.seed=3\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/optimizer=SMAC_BO.benchmark=branin.objectives=value.TrialBudget=10.seed=3/optimizer=SMAC_BO.benchmark=branin.objectives=value.TrialBudget=10.seed=3.parquet\n",
+      "INFO:hposuite.study:Running experiment 5/6\n",
+      "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.random_search.RandomSearch'>. Ignoring continuations=True.\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=RandomSearch.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/optimizer=RandomSearch.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3/optimizer=RandomSearch.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3.parquet\n",
+      "INFO:hposuite.study:Running experiment 6/6\n",
+      "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.smac.SMAC_BO'>. Ignoring continuations=True.\n",
+      "INFO:hpoglue._run:COMPLETED running optimizer=SMAC_BO.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3\n",
+      "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-from-problems/optimizer=SMAC_BO.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3/optimizer=SMAC_BO.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3.parquet\n",
+      "INFO:hposuite.study:Completed study with 6 runs\n"
+     ]
+    }
+   ],
+   "source": [
+    "study.optimize()"
    ]
   }
  ],
@@ -668,7 +773,7 @@
   "kernelspec": {
    "display_name": "hposuite_env",
    "language": "python",
-   "name": "python3"
+   "name": "hposuite_env"
   },
   "language_info": {
    "codemirror_mode": {
