disable_env changed to auto_env_handling

--- a/examples/plots_and_comparisons.ipynb
+++ b/examples/plots_and_comparisons.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
     "    budget=1000,\n",
     ")\n",
     "\n",
-    "study.optimize(overwrite=True, disable_env=True)"
+    "study.optimize(overwrite=True)"
    ]
   },
   {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
     "    budget=100,\n",
     ")\n",
     "\n",
-    "study.optimize(overwrite=True, disable_env=True)"
+    "study.optimize(overwrite=True)"
    ]
   },
   {
