--- a/examples/study_usage_examples.ipynb
+++ b/examples/study_usage_examples.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "from hposuite.study import create_study\n",
+    "from hposuite import create_study\n",
     "\n",
     "study = create_study(\n",
     "    name=\"ex-extra-seeds\",\n",
@@ -137,7 +137,7 @@
     }
    ],
    "source": [
-    "from hposuite.study import create_study\n",
+    "from hposuite import create_study\n",
     "\n",
     "study = create_study(\n",
     "    name=\"ex-dump-group\",\n",
@@ -220,55 +220,55 @@
       "INFO:hposuite.study:Running experiment 13/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=383329928 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=383329928.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:37,298] A new study created in memory with name: optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10-383329928\n",
+      "[I 2025-03-17 22:05:22,909] A new study created in memory with name: optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10-383329928\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=383329928\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=383329928/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=383329928.parquet\n",
       "INFO:hposuite.study:Running experiment 14/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=3324115917 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=3324115917.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:37,415] A new study created in memory with name: optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10-3324115917\n",
+      "[I 2025-03-17 22:05:23,074] A new study created in memory with name: optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10-3324115917\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=3324115917\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=3324115917/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=3324115917.parquet\n",
       "INFO:hposuite.study:Running experiment 15/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=2811363265 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=2811363265.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:37,538] A new study created in memory with name: optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10-2811363265\n",
+      "[I 2025-03-17 22:05:23,241] A new study created in memory with name: optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10-2811363265\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=2811363265\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=2811363265/optimizer=Optuna.benchmark=ackley.objectives=y.TrialBudget=10.seed=2811363265.parquet\n",
       "INFO:hposuite.study:Running experiment 16/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=383329928 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=383329928.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:37,712] A new study created in memory with name: optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10-383329928\n",
+      "[I 2025-03-17 22:05:23,407] A new study created in memory with name: optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10-383329928\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=383329928\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=383329928/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=383329928.parquet\n",
       "INFO:hposuite.study:Running experiment 17/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=3324115917 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=3324115917.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:37,890] A new study created in memory with name: optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10-3324115917\n",
+      "[I 2025-03-17 22:05:23,518] A new study created in memory with name: optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10-3324115917\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=3324115917\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=3324115917/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=3324115917.parquet\n",
       "INFO:hposuite.study:Running experiment 18/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=2811363265 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=2811363265.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:38,057] A new study created in memory with name: optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10-2811363265\n",
+      "[I 2025-03-17 22:05:23,614] A new study created in memory with name: optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10-2811363265\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=2811363265\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=2811363265/optimizer=Optuna.benchmark=branin.objectives=value.TrialBudget=10.seed=2811363265.parquet\n",
       "INFO:hposuite.study:Running experiment 19/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=383329928 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=383329928.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:38,180] A new study created in memory with name: optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10-383329928\n",
+      "[I 2025-03-17 22:05:23,711] A new study created in memory with name: optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10-383329928\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=383329928\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=383329928/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=383329928.parquet\n",
       "INFO:hposuite.study:Running experiment 20/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3324115917 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3324115917.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:38,361] A new study created in memory with name: optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10-3324115917\n",
+      "[I 2025-03-17 22:05:23,811] A new study created in memory with name: optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10-3324115917\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3324115917\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3324115917/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=3324115917.parquet\n",
       "INFO:hposuite.study:Running experiment 21/21\n",
       "INFO:hposuite.run:Overwriting optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=2811363265 in `state=<State.PENDING: 'PENDING'>` at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=2811363265.\n",
       "WARNING:hposuite.run:Continuations are not supported for the optimizer: <class 'hposuite.optimizers.optuna.OptunaOptimizer'>. Ignoring continuations=True.\n",
-      "[I 2025-03-17 15:01:38,548] A new study created in memory with name: optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10-2811363265\n",
+      "[I 2025-03-17 22:05:23,913] A new study created in memory with name: optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10-2811363265\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=2811363265\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-dump-group/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=2811363265/optimizer=Optuna.benchmark=mfh3_good.objectives=value.TrialBudget=10.seed=2811363265.parquet\n",
       "INFO:hposuite.study:Completed study with 21 runs\n"
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "from hposuite.study import create_study\n",
+    "from hposuite import create_study\n",
     "\n",
     "study = create_study(\n",
     "    name=\"ex-dump-group\",\n",
@@ -367,7 +367,7 @@
     }
    ],
    "source": [
-    "from hposuite.study import create_study\n",
+    "from hposuite import create_study\n",
     "\n",
     "study = create_study(\n",
     "    name=\"ex-dump-group\",\n",
@@ -411,7 +411,7 @@
     }
    ],
    "source": [
-    "from hposuite.study import create_study\n",
+    "from hposuite import create_study\n",
     "\n",
     "study = create_study(\n",
     "    name=\"ex-dump-group\",\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
     }
    ],
    "source": [
-    "from hposuite.study import Study\n",
+    "from hposuite import Study\n",
     "\n",
     "study = Study.from_dict(study_config)"
    ]
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -532,20 +532,7 @@
       "INFO:hposuite.study:Running experiment 3/6\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=SMAC_Hyperband.eta=2.benchmark=pd1-imagenet-resnet-512.objectives=valid_error_rate.fidelities=epoch.TrialBudget=50.seed=1\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-load-study-dict/optimizer=SMAC_Hyperband.eta=2.benchmark=pd1-imagenet-resnet-512.objectives=valid_error_rate.fidelities=epoch.TrialBudget=50.seed=1/optimizer=SMAC_Hyperband.eta=2.benchmark=pd1-imagenet-resnet-512.objectives=valid_error_rate.fidelities=epoch.TrialBudget=50.seed=1.parquet\n",
-      "INFO:hposuite.study:Running experiment 4/6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-03-17 15:02:48.450\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mdehb.optimizers.dehb\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m264\u001b[0m - \u001b[33m\u001b[1mA checkpoint already exists, results could potentially be overwritten.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:hposuite.study:Running experiment 4/6\n",
       "INFO:hpoglue._run:COMPLETED running optimizer=DEHB.benchmark=mfh3_good.objectives=value.fidelities=z.TrialBudget=50.seed=1\n",
       "INFO:hposuite.run:Results dumped at /home/soham/repos/hposuite/examples/example-outputs/ex-load-study-dict/optimizer=DEHB.benchmark=mfh3_good.objectives=value.fidelities=z.TrialBudget=50.seed=1/optimizer=DEHB.benchmark=mfh3_good.objectives=value.fidelities=z.TrialBudget=50.seed=1.parquet\n",
       "INFO:hposuite.study:Running experiment 5/6\n",
@@ -578,20 +565,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:hposuite.study:Generated 4 runs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:hposuite.study:Generated 4 runs\n",
       "INFO:hposuite.study:Created study at /home/soham/repos/hposuite/examples/example-outputs/sample_multirun\n",
       "INFO:hposuite.study:Dumped experiments to /home/soham/repos/hposuite/examples/example-outputs/sample_multirun/dump_all.txt\n"
      ]
@@ -612,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
