datadir check changes

--- a/examples/hposuite_demo.ipynb
+++ b/examples/hposuite_demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "# It is assumed that the datadir is hposuite/data\n",
+    "# It is assumed that the datadir is cwd() / data\n",
     "\n",
     "from lib.benchmarks import BENCHMARKS\n",
     "from lib.optimizers import OPTIMIZERS\n",
